Complete user APIs; Add authorization check;

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=9922
 
 ## datasource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1/absorb?serverTimezone=America/Los_Angeles
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://164.90.158.28/absorb?serverTimezone=America/Los_Angeles
+spring.datasource.username=novo
 spring.datasource.password=yuxiao98
 
